# hatch-pyside

./: .gitignore  CHANGES.txt  README.md  pyproject.toml
src/: custom_build.py
src/hatch_pyside/: __about__.py  __init__.py  __main__.py  build.py  config.py
src/hatch_pyside/gui/: about.ui  app.py  hatch-pyside.pyproject  mainwindow.py  mainwindow.ui  project_chooser_dlg.ui
src/hatch_pyside/plugin/: hooks.py  plugin.py
tests/: test_build.py  test_config.py
tests/data/: hatch.wheel  pyproject.empty  pyproject.glob  pyproject.toml
tests/data/src/foo/: MainWindow.ui  __init__.py  app.py  foo.pyproject
